--- a/src/app/inspector_dashboard/section/section.component.html
+++ b/src/app/inspector_dashboard/section/section.component.html
@@ -21,7 +21,7 @@
                
               </li> -->
               <li>
-                <button (click)="proceed('Breif_specification')"><p>Breif Specification</p></button>
+                <button (click)="proceed('Breif_specification')"><p>Brief Specification</p></button>
                
               </li>
               <li>
