cartop component created by prabu

--- a/src/app/inspector_dashboard/section/section.component.html
+++ b/src/app/inspector_dashboard/section/section.component.html
@@ -32,6 +32,11 @@
                 <button (click)="proceed2('cabin')"><p>Cabin</p></button>
                
               </li>
+
+              <li>
+                <button (click)="proceed3('cartop')"><p>Cartop</p></button>
+               
+              </li>
           
         </ul>
     </div>
