--- a/src/app/inspector_dashboard/breif-spec/breif-spec.component.scss
+++ b/src/app/inspector_dashboard/breif-spec/breif-spec.component.scss
@@ -1,52 +1,9 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     margin: 0 auto;
     padding: 20px;
-    /* background-color:whitesmoke; */
-}
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    width: 50px;
-    position: fixed;
-    bottom: 350px;
-    right:40px;
-    z-index: 1;
-}
-
-.box {
-    width: 100%;
-    height: 40px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    margin-bottom: 2px;
-    cursor: pointer;
-    display: flex;
-    align-items: center; 
-    justify-content: center; 
-}
-
-.app{
-  color: black;
-  margin-bottom: 5px;
-}
-.button-container {
-  display: flex;
-  justify-content: center; 
-  align-items: center; 
-  height: 10vh; 
-}
-
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
+    background-color:whitesmoke;
+} */
 
 table {
     width: 80%;
@@ -55,7 +12,9 @@ table {
     background-color: #f0f0f0;
     border: 2px solid black;
     margin: auto;
+    margin-top: 10px; 
 }
+
 
 th, td {
     padding: 10px;
@@ -140,7 +99,7 @@ td.dropdown-container input {
 
 
 input[type="text"] {
-    width: 300%; /* Adjust width as needed */
+    width: 180%; 
     padding: 5px;
     font-size: 16px;
     border: none;
@@ -162,23 +121,81 @@ input[type="text"]:focus {
     outline: none;
 }
 
-@media screen and (max-width: 768px) {
+
+.button-container {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  height: 10vh; 
+}
+
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 50px;
+    position: fixed;
+    bottom: 350px;
+    right:40px;
+    z-index: 1;
+}
+
+.box {
+    width: 100%;
+    height: 40px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    margin-bottom: 2px;
+    cursor: pointer;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+}
+
+.app{
+  color: black;
+  margin-bottom: 5px;
+}
+
+@media screen and (max-width: 1024px) {
     table {
-        font-size: 14px;
+        width: 100%;
     }
-    th, td {
+    td {
         padding: 8px;
+        min-width: auto;
+        max-width: auto;
     }
-  
+    input[type="text"] {
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    td {
+        padding: 6px;
+    }
 }
 
 @media screen and (max-width: 576px) {
-    table {
-        font-size: 12px;
+    td {
+        padding: 4px;
     }
-    th, td {
-        padding: 6px;
+    .container {
+        width: auto;
+        bottom: 20px;
+        right: 20px;
     }
-    
-    
 }
