all section component done by prabu

--- a/src/app/inspector_dashboard/section/section.component.html
+++ b/src/app/inspector_dashboard/section/section.component.html
@@ -37,6 +37,12 @@
                 <button (click)="proceed3('cartop')"><p>Cartop</p></button>
                
               </li>
+              <li>
+                <button (click)="proceed4('machineroom')"><p>Machine Room</p></button>
+              </li>
+              <li>
+                <button (click)="proceed5('floorlanding')"><p>Floor Landing</p></button>
+              </li>
           
         </ul>
     </div>
