complete sync by sabari

--- a/src/app/out-box/out-box.component.html
+++ b/src/app/out-box/out-box.component.html
@@ -14,7 +14,7 @@
   
   <div class="table-container">
     <!-- Check if allValues array is empty -->
-    <ng-container *ngIf="allValues.length > 0; else noData">
+    <ng-container *ngIf="allValues && allValues.length > 0; else noData">
         <table class="responsive-table">
             <thead>
                 <tr>
