--- a/src/app/out-box/out-box.component.html
+++ b/src/app/out-box/out-box.component.html
@@ -21,6 +21,7 @@
                     <th>Date</th>
                     <th>UnitNo.</th>
                     <th>Inspection Parts</th>
+                    <th>Description</th>
                     <th>Inspector Name</th>
                 </tr>
             </thead>
@@ -28,6 +29,7 @@
                 <tr *ngFor="let value of allValues">
                     <td>{{ value.updatedAt | date: 'yyyy-MM-dd' }}</td>
                     <td>{{ value.unitNo }}</td>
+                    <td style="text-transform: uppercase">{{ value.section}}</td>
                     <td>{{ value.title }}</td>
                     <td>{{ value.inspectorName }}</td>
                 </tr>
