--- a/src/app/inspector_dashboard/pit/pit.component.html
+++ b/src/app/inspector_dashboard/pit/pit.component.html
@@ -1,6 +1,6 @@
 <div class="order-status">
 
-    <a class="step" *ngFor="let step of steps; let i = index" [ngClass]="{'completed': completedStatus[i]}" (click)="handleCardClick(step)">
+    <a class="step" *ngFor="let step of steps; let i = index" [ngClass]="{'completed': completedStatus[i]}" (click)="!completedStatus[i] && handleCardClick(step)">
         <div class="card">
             <div class="card-body">
               <div class="content">
@@ -11,7 +11,7 @@
             </div>
             <div class="progress-bar"></div>
           </div>
-      </a>
+    </a>
       
   </div>
   <router-outlet ></router-outlet>
