locally commit for flow done

--- a/src/app/inspector_dashboard/pit/pitcheckpoints/pitcheckpoints.component.html
+++ b/src/app/inspector_dashboard/pit/pitcheckpoints/pitcheckpoints.component.html
@@ -7,9 +7,9 @@
                 <thead>
 
                     <tr>
-                        <th>Dropdown</th>
+                        <th>Implication</th>
                         <th>Photo</th>
-                        <th>Choose One or More</th>
+                        <th>Need to Maintain</th>
                         <th>Image Required for Report </th>
                     </tr>
                     
