--- a/src/app/inspector_dashboard/floorlanding/floorlandingcheckpoint/floorlandingcheckpoint.component.html
+++ b/src/app/inspector_dashboard/floorlanding/floorlandingcheckpoint/floorlandingcheckpoint.component.html
@@ -6,9 +6,9 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th>Dropdown</th>
+                            <th>Implication</th>
                             <th>Photo</th>
-                            <th>Choose One or More</th>
+                            <th>Need to Maintain</th>
                             <th>Image Required for Report </th>
                         </tr>
                     </thead>
